# JonMem

./: License.txt  README.md  backup_io.py  buildozer.spec  follow-up.md  main.py  project-tasks.md  pyproject.toml  requirements.txt  test_training_hints.py  training.py
.github/workflows/: build.yml
data/: seed_vocab.yaml
tests/: test_backup_io.py  test_session_simulation.py  test_training.py
