[project]
name = "jonmem"
version = "0.1"
description = "ADHS-optimierte Karteikarten-App"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "kivy",
  "pyyaml",
  "plyer"
]

authors = [
  { name = "Arnd Brandes" },
]

[tool.uv]
# Standard-Workspace-venv im Projektordner
managed = true
dev-dependencies = ["pytest"]

[tool.uv.pip]
# Kivy stellt für manche Plattformen Wheels über den eigenen Index bereit.
# Falls deine Umgebung sonst versucht, Kivy aus Source zu bauen, kann diese Zeile helfen.
# (Wenn du das nicht brauchst: einfach stehen lassen oder auskommentieren.)
extra-index-url = ["https://kivy.org/downloads/simple/"]
